[feat] using ranking_report in longling

--- a/examples/IRR/IRT.ipynb
+++ b/examples/IRR/IRT.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,15 +29,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "reading records from ../../data/a0910/item.csv: 100%|██████████| 19529/19529 [00:00<00:00, 52918.35it/s]\n",
-      "rating2triplet: 100%|██████████| 17051/17051 [00:21<00:00, 805.56it/s]\n"
+      "reading records from ../../data/a0910/item.csv: 100%|██████████| 19529/19529 [00:00<00:00, 55628.64it/s]\n",
+      "rating2triplet: 100%|██████████| 17051/17051 [00:16<00:00, 1032.23it/s]\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(<longling.lib.iterator.AsyncLoopIter at 0x2133cafa400>,\n <torch.utils.data.dataloader.DataLoader at 0x2133d895a30>,\n <torch.utils.data.dataloader.DataLoader at 0x2133c9ba2b0>)"
+      "text/plain": "(<longling.lib.iterator.AsyncLoopIter at 0x1f62c7c49a0>,\n <torch.utils.data.dataloader.DataLoader at 0x1f629124f70>,\n <torch.utils.data.dataloader.DataLoader at 0x1f62bae1be0>)"
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "        user_id  item_id  score\n0          1615    12977    1.0\n1           782    13124    0.0\n2          1084    16475    0.0\n3           593     8690    0.0\n4           127    14225    1.0\n...         ...      ...    ...\n186044     2280     6019    0.0\n186045      121        2    1.0\n186046      601     5425    1.0\n186047      573     2412    0.0\n186048       60     2969    1.0\n\n[186049 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user_id</th>\n      <th>item_id</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1615</td>\n      <td>12977</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>782</td>\n      <td>13124</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1084</td>\n      <td>16475</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>593</td>\n      <td>8690</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>127</td>\n      <td>14225</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>186044</th>\n      <td>2280</td>\n      <td>6019</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>186045</th>\n      <td>121</td>\n      <td>2</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>186046</th>\n      <td>601</td>\n      <td>5425</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>186047</th>\n      <td>573</td>\n      <td>2412</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>186048</th>\n      <td>60</td>\n      <td>2969</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>186049 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,20 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 727it [02:02,  5.92it/s]\n",
-      "evaluating: 100%|██████████| 101/101 [00:01<00:00, 78.62it/s]\n",
-      "formatting item df: 100%|██████████| 10415/10415 [00:01<00:00, 9749.68it/s]\n",
-      "ranking metrics: 10415it [00:40, 254.13it/s]\n",
-      "Epoch 1: 100%|██████████| 727/727 [02:01<00:00,  5.97it/s]\n",
-      "evaluating: 100%|██████████| 101/101 [00:01<00:00, 82.20it/s]\n",
-      "formatting item df: 100%|██████████| 10415/10415 [00:01<00:00, 9593.92it/s]\n",
-      "ranking metrics: 10415it [00:42, 246.39it/s]\n",
+      "Epoch 0: 727it [00:48, 14.99it/s]\n",
+      "evaluating: 100%|██████████| 101/101 [00:00<00:00, 150.98it/s]\n",
+      "formatting item df: 100%|██████████| 10415/10415 [00:00<00:00, 11426.27it/s]\n",
+      "ranking metrics: 10415it [00:15, 674.53it/s]\n",
+      "Epoch 1: 100%|██████████| 727/727 [00:49<00:00, 14.64it/s]\n",
+      "evaluating: 100%|██████████| 101/101 [00:00<00:00, 137.22it/s]\n",
+      "formatting item df: 100%|██████████| 10415/10415 [00:00<00:00, 12475.22it/s]\n",
+      "ranking metrics: 10415it [00:14, 721.48it/s]\n",
       "INFO:root:save parameters to IRR-IRT.params\n"
      ]
     },
@@ -112,34 +112,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0] Loss: 6.042366, PointLoss: 0.676846, PairLoss: 11.407887\n",
+      "[Epoch 0] Loss: 2.573528, PointLoss: 0.675686, PairLoss: 4.471370\n",
       "[Epoch 0]\n",
-      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k  ndcg@k(B)  \\\n",
-      "1   1.000000     0.674988  0.475920  0.527342  1.000000      10415   1.000000   \n",
-      "3   0.891091     0.674540  0.737472  0.685684  1.906961      10415   0.416033   \n",
-      "5   0.893729     0.674165  0.794214  0.711436  2.229573      10415   0.424743   \n",
-      "10  0.893938     0.673999  0.816025  0.720019  2.423428      10415   0.425957   \n",
-      "\n",
-      "    precision@k(B)  recall@k(B)   f1@k(B)  len@k(B)  support@k(B)  \n",
-      "1         0.326452     0.253676  0.273340       1.0         10415  \n",
-      "3         0.211522     0.434936  0.268588       3.0         10415  \n",
-      "5         0.149304     0.481618  0.215243       5.0         10415  \n",
-      "10        0.082180     0.502223  0.134561      10.0         10415  \n",
-      "auc: 0.839379\tmap: 0.912738\tmrr: 0.904580\tcoverage_error: 3.005876\tranking_loss: 0.281039\tlen: 2.458569\tsupport: 10415\tmap(B): 0.888846\tmrr(B): 0.902716\n",
-      "[Epoch 1] Loss: 6.027494, PointLoss: 0.658067, PairLoss: 11.396921\n",
+      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k\n",
+      "1   1.000000     0.666635  0.469846  0.520679  1.000000      10415\n",
+      "3   0.886982     0.671884  0.734436  0.683024  1.906961      10415\n",
+      "5   0.890280     0.673186  0.792938  0.710393  2.229573      10415\n",
+      "10  0.890548     0.673845  0.815712  0.719816  2.423428      10415\n",
+      "auc: 0.830947\tmap: 0.908118\tmrr: 0.898518\tcoverage_error: 3.039120\tranking_loss: 0.295783\tlen: 2.458569\tsupport: 10415\n",
+      "[Epoch 1] Loss: 2.559691, PointLoss: 0.655644, PairLoss: 4.463738\n",
       "[Epoch 1]\n",
-      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k  ndcg@k(B)  \\\n",
-      "1   1.000000     0.677196  0.476987  0.528690  1.000000      10415   1.000000   \n",
-      "3   0.891640     0.674220  0.737001  0.685327  1.906961      10415   0.414967   \n",
-      "5   0.894143     0.674108  0.793993  0.711313  2.229573      10415   0.424384   \n",
-      "10  0.894282     0.674037  0.816083  0.720065  2.423428      10415   0.425646   \n",
-      "\n",
-      "    precision@k(B)  recall@k(B)   f1@k(B)  len@k(B)  support@k(B)  \n",
-      "1         0.325780     0.253551  0.273017       1.0         10415  \n",
-      "3         0.211426     0.433608  0.268138       3.0         10415  \n",
-      "5         0.149458     0.481781  0.215406       5.0         10415  \n",
-      "10        0.082199     0.502331  0.134602      10.0         10415  \n",
-      "auc: 0.839306\tmap: 0.912996\tmrr: 0.905877\tcoverage_error: 3.007220\tranking_loss: 0.281167\tlen: 2.458569\tsupport: 10415\tmap(B): 0.888498\tmrr(B): 0.903218\n"
+      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k\n",
+      "1   1.000000     0.668459  0.470703  0.521785  1.000000      10415\n",
+      "3   0.887368     0.672428  0.734589  0.683341  1.906961      10415\n",
+      "5   0.890856     0.673321  0.792951  0.710456  2.229573      10415\n",
+      "10  0.891069     0.673961  0.815888  0.719951  2.423428      10415\n",
+      "auc: 0.832663\tmap: 0.908796\tmrr: 0.899676\tcoverage_error: 3.036266\tranking_loss: 0.292783\tlen: 2.458569\tsupport: 10415\n"
      ]
     }
    ],
@@ -167,41 +155,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "INFO:root:load parameters from IRR-IRT.params\n",
-      "evaluating: 100%|██████████| 218/218 [00:01<00:00, 162.75it/s]\n",
-      "formatting item df: 100%|██████████| 13682/13682 [00:01<00:00, 8991.02it/s]\n",
-      "ranking metrics: 13682it [01:00, 227.23it/s]\n"
+      "evaluating: 100%|██████████| 218/218 [00:00<00:00, 262.05it/s]\n",
+      "formatting item df: 100%|██████████| 13682/13682 [00:01<00:00, 13153.81it/s]\n",
+      "ranking metrics: 13682it [00:23, 584.22it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k  ndcg@k(B)  \\\n",
-      "1   1.000000     0.668981  0.370194  0.434254  1.000000      13682   1.000000   \n",
-      "3   0.861122     0.668993  0.663701  0.634487  2.268528      13682   0.447512   \n",
-      "5   0.868104     0.668187  0.770498  0.690224  2.981582      13682   0.467525   \n",
-      "10  0.869298     0.667871  0.844868  0.723768  3.723652      13682   0.472620   \n",
-      "\n",
-      "    precision@k(B)  recall@k(B)   f1@k(B)  len@k(B)  support@k(B)  \n",
-      "1         0.333065     0.215427  0.243171       1.0         13682  \n",
-      "3         0.250597     0.420785  0.286807       3.0         13682  \n",
-      "5         0.200746     0.511538  0.263657       5.0         13682  \n",
-      "10        0.127386     0.579823  0.192924      10.0         13682  \n",
-      "auc: 0.768879\tmap: 0.869789\tmrr: 0.872195\tcoverage_error: 4.651518\tranking_loss: 0.318189\tlen: 4.075428\tsupport: 13682\tmap(B): 0.818462\tmrr(B): 0.871107\n"
+      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k\n",
+      "1   1.000000     0.671466  0.370265  0.434827  1.000000      13682\n",
+      "3   0.862770     0.668872  0.663951  0.634433  2.268528      13682\n",
+      "5   0.868876     0.667471  0.769999  0.689557  2.981582      13682\n",
+      "10  0.869360     0.667608  0.844664  0.723544  3.723652      13682\n",
+      "auc: 0.767649\tmap: 0.869138\tmrr: 0.873835\tcoverage_error: 4.662276\tranking_loss: 0.320187\tlen: 4.075428\tsupport: 13682\n"
      ]
     }
    ],
    "source": [
-    "from EduCDM.IRR.metrics import result_format\n",
     "cdm.load(\"IRR-IRT.params\")\n",
-    "print(result_format(cdm.eval(test_data)))"
+    "print(cdm.eval(test_data))"
    ],
    "metadata": {
     "collapsed": false,
