--- a/examples/IRR/DINA.ipynb
+++ b/examples/IRR/DINA.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
@@ -101,7 +101,11 @@
       "evaluating: 100%|██████████| 101/101 [00:00<00:00, 151.21it/s]\n",
       "formatting item df: 100%|██████████| 10415/10415 [00:00<00:00, 13243.30it/s]\n",
       "ranking metrics: 10415it [00:14, 718.34it/s]\n",
-      "Epoch 1:  36%|███▌      | 260/727 [00:21<00:37, 12.33it/s]"
+      "Epoch 1: 100%|██████████| 727/727 [01:05<00:00, 11.05it/s]\n",
+      "evaluating: 100%|██████████| 101/101 [00:00<00:00, 130.40it/s]\n",
+      "formatting item df: 100%|██████████| 10415/10415 [00:00<00:00, 11689.41it/s]\n",
+      "ranking metrics: 10415it [00:15, 683.86it/s]\n",
+      "INFO:root:save parameters to IRR-DINA.params\n"
      ]
     },
     {
@@ -115,7 +119,15 @@
       "3   0.894090     0.678829  0.741237  0.689378  1.906961      10415\n",
       "5   0.895159     0.675855  0.796159  0.713132  2.229573      10415\n",
       "10  0.894894     0.674277  0.816401  0.720339  2.423428      10415\n",
-      "auc: 0.856217\tmap: 0.884234\tmrr: 0.918452\tcoverage_error: 3.194929\tranking_loss: 0.406348\tlen: 2.458569\tsupport: 10415\n"
+      "auc: 0.856217\tmap: 0.884234\tmrr: 0.918452\tcoverage_error: 3.194929\tranking_loss: 0.406348\tlen: 2.458569\tsupport: 10415\n",
+      "[Epoch 1] Loss: 2.555724, PointLoss: 0.735666, PairLoss: 4.375782\n",
+      "[Epoch 1]\n",
+      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k\n",
+      "1   1.000000     0.697552  0.487173  0.541213  1.000000      10415\n",
+      "3   0.895660     0.680493  0.742846  0.690920  1.906961      10415\n",
+      "5   0.896209     0.676374  0.796789  0.713664  2.229573      10415\n",
+      "10  0.895947     0.674335  0.816513  0.720412  2.423428      10415\n",
+      "auc: 0.859627\tmap: 0.884662\tmrr: 0.919965\tcoverage_error: 3.191404\tranking_loss: 0.402945\tlen: 2.458569\tsupport: 10415\n"
      ]
     }
    ],
@@ -138,15 +150,37 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:load parameters from IRR-DINA.params\n",
+      "evaluating: 100%|██████████| 218/218 [00:01<00:00, 146.09it/s]\n",
+      "formatting item df: 100%|██████████| 13682/13682 [00:01<00:00, 10267.90it/s]\n",
+      "ranking metrics: 13682it [00:25, 538.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      ndcg@k  precision@k  recall@k      f1@k     len@k  support@k\n",
+      "1   1.000000     0.694051  0.381306  0.448280  1.000000      13682\n",
+      "3   0.868723     0.680298  0.672331  0.643307  2.268528      13682\n",
+      "5   0.872068     0.673917  0.775802  0.695325  2.981582      13682\n",
+      "10  0.871886     0.669289  0.846420  0.725201  3.723652      13682\n",
+      "auc: 0.794464\tmap: 0.835652\tmrr: 0.888232\tcoverage_error: 4.901166\tranking_loss: 0.456207\tlen: 4.075428\tsupport: 13682\n"
+     ]
+    }
+   ],
    "source": [
     "cdm.load(\"IRR-DINA.params\")\n",
     "print(cdm.eval(test_data))"
@@ -154,8 +188,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
