[docs] fix typos

--- a/examples/IRT/GD/IRT.ipynb
+++ b/examples/IRT/GD/IRT.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This notebook will show you how to train and use the GDIRT.\n",
     "First, we will show how to get the data (here we use a0910 as the dataset).\n",
-    "Then we will show how to train a MCD and perform the parameters persistence.\n",
+    "Then we will show how to train a GDIRT and perform the parameters persistence.\n",
     "At last, we will show how to load the parameters from the file and evaluate on the test dataset.\n",
     "\n",
     "The script version could be found in [IRT.py](IRT.py)"
