[docs] fix typos

--- a/examples/IRR/DINA.ipynb
+++ b/examples/IRR/DINA.ipynb
@@ -3,12 +3,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Item Response Ranking for IRT\n",
+    "# Item Response Ranking for DINA\n",
     "\n",
     "This notebook will show you how to train and use the IRR-DINA.\n",
     "Refer to [IRR doc](../../docs/IRR.md) for more details.\n",
     "First, we will show how to get the data (here we use a0910 as the dataset).\n",
-    "Then we will show how to train a IRR-IRT and perform the parameters persistence.\n",
+    "Then we will show how to train a IRR-DINA and perform the parameters persistence.\n",
     "At last, we will show how to load the parameters from the file and evaluate on the test dataset."
    ],
    "metadata": {
